# chat-client

./: .gitignore  README.md  README_zh.md  TESTING_MESSAGES.md  example_context_pattern.rs  example_instance_manager.rs  package.json  pnpm-lock.yaml  tsconfig.json  ui.json  vite.config.ts
.github/instructions/: plugin-development-guide.md  指令.instructions.md
.github/workflows/: README.md  build-and-release.yml  ci.yml  nightly.yml  release.yml
src/: App.vue  SerialDebugger.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugin-interface/: Cargo.toml  FFI_SAFETY.md  README.md
src-tauri/plugin-interface/src/: api.rs  async_manager.rs  callbacks.rs  config.rs  handler.rs  lib.rs  logging.rs  macros.rs  metadata.rs  symbols.rs
src-tauri/plugin-interface/src/logging/: logging.rs
src-tauri/plugin-interface/src/message/: mod.rs  plugin_message.rs  stream_message.rs
src-tauri/plugin-interface/src/plugin_ui/: builders.rs  component_ref.rs  components.rs  mod.rs  plugin_ui.rs  tests.rs
src-tauri/plugin-interface/src/pluginui/: components.rs  context.rs  mod.rs  traits.rs  ui.rs
src-tauri/src/: lib.rs  logging.rs  main.rs  test_multi_instance.rs
src-tauri/src/api/: README.md  download.rs  general.rs  mod.rs  plugins.rs
src-tauri/src/plugins/: async_manager.rs  config.rs  directories.rs  loader.rs  manager.rs  mod.rs  repository.rs
src-tauri/src/plugins/example/: Cargo.toml  build.rs  config.toml
src-tauri/src/plugins/example/src/: async_example.rs  lib.rs
src-tauri/src/plugins/example2/: config.toml  libexample2.dylib
src/api/: README.md  download.ts  index.ts  listener.ts  plugin-ui-types.ts  plugin-ui.ts  plugins.ts  types.ts
src/assets/: main.css
src/components/: ComponentRenderer.vue  ConfigPanel.vue  HistoryPanel.vue  HomeView.vue  MessageDisplay.vue  MessageInput.vue  PluginManager.vue  PluginToolbar.vue  PluginUI.vue  SystemSettings.vue  UnifiedLeftPanel.vue
src/components/Messages/: MessageContent.vue  MessageEditor.vue  MessageErrorBoundary.vue  MessageHeader.vue  MessageItem.vue  MessageMenubar.vue  MessageTokens.vue
src/components/Messages/Blocks/: CitationBlock.vue  CodeBlock.vue  ErrorBlock.vue  FileBlock.vue  ImageBlock.vue  MainTextBlock.vue  PlaceholderBlock.vue  ThinkingBlock.vue  ToolBlock.vue  index.vue
src/components/Messages/Markdown/: MarkdownRenderer.vue
src/components/Tabs/: README.md  TabBar.vue  TabContent.vue  TabContextMenu.vue  TabItem.vue  TabManager.vue  examples.ts  index.ts
src/components/panels/: ConfigPanel.vue  HistoryPanel.vue  PluginUI.vue  ShortcutsPanel.vue  index.ts
src/examples/: pageManagerUsage.ts
src/router/: index.ts
src/stores/: history.ts  messages.ts  messages_temp.ts  pageManager.ts  plugins.ts  settings.ts  shortcuts.ts  stream.ts  tabManager.ts
src/types/: markdown-it.d.ts
src/views/: HomeView.vue  PluginUITest.vue
