[workspace]
members = [".", "src/plugins/example"]

[package]
name = "chat-client"
version = "0.1.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "chat-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chat_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libloading = "0.8"
walkdir = "2.4"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
plugin-interfaces = { git = "https://github.com/luodeb/plugin-interfaces.git" }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
zip = "4.0.0"
