[package]
name = "example-plugin"
version = "1.0.0"
edition = "2021"
description = "示例插件"
authors = ["Your Name"]

[lib]
name = "example"
crate-type = ["cdylib"]

[build-dependencies]
toml = "0.8"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 引用插件接口库
plugin-interface = { path = "../../../plugin-interface" }
