[package]
name = "example-plugin"
version = "1.0.0"
edition = "2021"
description = "示例插件"
authors = ["Your Name"]

[lib]
name = "example"
crate-type = ["cdylib"]

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.1", features = ["full"] }

# 引用插件接口库
plugin-interface = { path = "../../../plugin-interface" }
